Fixed bottom spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -43,10 +43,6 @@
 	font-size: 50px;
 }
 
-.gcal {
-    margin-top: 50px;
-}
-
 footer {
 	margin: 50px 0;
 }
